Fixed overflow issues

--- a/src/styles/Rankings.scss
+++ b/src/styles/Rankings.scss
@@ -5,6 +5,11 @@
     .ranks {
         display: flex;
         flex-direction: column;
+        max-height: calc(100vh - 50px);
+
+        @include for-tablet-portrait-down {
+            max-height: calc(100vh - 102px);
+        }
 
         .Group {
             width: 100%;
@@ -13,6 +18,8 @@
         .groups {
             display: flex;
             margin: 3px 0;
+            max-height: 100%;
+            overflow: auto;
         }
     }
 }
